<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">三叶草</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="about_git">三叶草   1.3.2</string>
    <string name="about_agree_1">《沈工大软件许可及服务协议》</string>
    <string name="about_agree_2">《三叶草隐私保护指引》</string>
    <string name="about_copy_right">钟小月   版权所有</string>
    <string name="about_copy_english">CopyRight @ 2019-2020 Moon.</string>
    
    <string name="about_function_intro">
               【风机监控】实时查看风机运行参数，再也不用担心我的风机\n
               【紧急联系】一旦出现风机异常，随时联系风场中心员工\n
               【一键查询】一键查看风机效益报表，一览无余\n
               【历史记录】只要你想看，随时可看
    </string>
    
</resources>
